--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,91 +3,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="org.d3ifcool.rememberactivities.MainActivity">
 
     <RelativeLayout
+        android:id="@+id/relativ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:id="@+id/relativ">
+        android:layout_marginTop="168dp"
+        android:gravity="center">
 
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:text="@string/remember_activities"
-            android:textColor="@android:color/black"
-            android:textSize="25sp" />
+            android:textColor="@android:color/white"
+            android:textSize="25sp"
+            android:textStyle="italic" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
 
-            android:layout_gravity="center"
-            android:layout_marginTop="199dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingBottom="15dp">
+        <ProgressBar
+            android:id="@+id/pbar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true" />
 
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:hint="@string/email"
-                android:inputType="text"
-                android:textColorLink="@color/colorPrimary"
-                android:textSize="15sp" />
-
-            <EditText
-                android:id="@+id/pass"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:textColorLink="@color/colorPrimary"
-                android:textSize="15sp" />
-
-        </LinearLayout>
 
     </RelativeLayout>
-
-    <Button
-        android:id="@+id/masuk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
         android:layout_below="@+id/relativ"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"
-        android:text="@string/masuk"
-        android:textColor="#ffff" />
-    <ProgressBar
-        android:id="@+id/pbar"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/masuk"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
-
-    <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/masuk"
-        android:layout_centerHorizontal="true"
-        android:text="@string/masuk_dengan_akun_google" />
+        android:layout_centerInParent="true"
+        android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/klik"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:text="@string/klik_di_sini"
-        android:textColor="@color/colorPrimary" />
+        <ImageView
+            android:id="@+id/google"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/google"/>
 
+        <TextView
+
+            android:padding="15dp"
+            android:id="@+id/klik"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/google"
+            android:text="Masuk dengan akun google"
+            android:textColor="@color/colorPrimary" />
+    </RelativeLayout>
 </RelativeLayout>
