menambahkan no title bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,20 +44,9 @@
         android:layout_centerInParent="true"
         android:background="@android:color/white">
 
-        <ImageView
-            android:id="@+id/google"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/google"/>
-
-        <TextView
-
-            android:padding="15dp"
-            android:id="@+id/klik"
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/google"
-            android:text="Masuk dengan akun google"
-            android:textColor="@color/colorPrimary" />
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 </RelativeLayout>
