--- a/app/src/main/res/layout/activity_tambah_kegiatan.xml
+++ b/app/src/main/res/layout/activity_tambah_kegiatan.xml
@@ -32,7 +32,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jam"
+        android:text="Jam Mulai"
+        android:textSize="14sp"/>
+
+    <EditText
+        android:paddingTop="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jam Berakhir"
         android:textSize="14sp"/>
 
     <EditText
