--- a/app/src/main/res/layout/activity_lihat_kegiatan.xml
+++ b/app/src/main/res/layout/activity_lihat_kegiatan.xml
@@ -16,7 +16,7 @@
         >
 
         <RelativeLayout
-            android:background="#2196f3"
+            android:background="@color/colorMain2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
