--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,23 @@
     android:id="@+id/mainlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="#99000000"
     tools:context="org.d3ifcool.rememberactivities.MainActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_marginTop="75dp"
+        android:background="@color/colorMain2">
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logo"
+        android:id="@+id/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+
+        />
 
     <RelativeLayout
         android:id="@+id/relativ"
@@ -14,7 +29,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="190dp"
         android:gravity="center">
 
 
@@ -25,9 +40,10 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:text="@string/remember_activities"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorMain"
             android:textSize="25sp"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            />
 
 
         <ProgressBar
@@ -43,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginBottom="25dp"
        >
 
         <com.google.android.gms.common.SignInButton
@@ -50,4 +67,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+</RelativeLayout>
 </RelativeLayout>
