--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
     android:layout_height="475dp"
-    android:background="#005792"
+    android:background="#1794ac"
     android:padding="5dp"
     android:layout_gravity="center"
     tools:context="org.d3ifcool.rememberactivities.PopupActivity">
@@ -14,6 +14,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/alarm"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp" />
         <TextView
             android:id="@+id/popUp_namaKegiatan"
             android:layout_width="wrap_content"
