menambahkan layout rincian kegiatan

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorMain">#b41b09</color>
     <color name="colorMain2">#e8d29c</color>
+    <color name="Black">#000</color>
 
 </resources>
