--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
     android:layout_height="475dp"
-    android:background="#1794ac"
+    android:background="@color/colorMain2"
     android:padding="5dp"
     android:layout_gravity="center"
     tools:context="org.d3ifcool.rememberactivities.PopupActivity">
@@ -15,11 +15,12 @@
         android:orientation="vertical"
         >
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/alarm"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:src="@drawable/alarm2"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp" />
+            android:layout_marginTop="50dp"
+            />
         <TextView
             android:id="@+id/popUp_namaKegiatan"
             android:layout_width="wrap_content"
@@ -27,7 +28,7 @@
             android:text="kegiatan"
             android:textStyle="bold"
             android:textSize="25sp"
-            android:textColor="#FFFFFF"
+            android:textColor="#000"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             />
@@ -36,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="jam --:--"
-            android:textColor="#FFFFFF"
+            android:textColor="#000"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp" />
         <LinearLayout
@@ -53,7 +54,7 @@
                 android:gravity="center">
                 <Button
                     android:id="@+id/popUp_jeda"
-                    android:background="#00BBF0"
+                    android:background="@color/colorMain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Jeda"
@@ -68,7 +69,7 @@
                 android:gravity="center">
                 <Button
                     android:id="@+id/popUp_tutup"
-                    android:background="#00BBF0"
+                    android:background="@color/colorMain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tutup"
