google sign udah jadi beserta logout

--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -16,5 +16,10 @@
         android:title="Tentang Kami"
         app:showAsAction="never"
         />
+    <item
+        android:id="@+id/logout"
+        android:title="Keluar akun"
+        app:showAsAction="never"
+        />
 
 </menu>
