--- a/app/src/main/res/layout/activity_lihat_kegiatan.xml
+++ b/app/src/main/res/layout/activity_lihat_kegiatan.xml
@@ -7,53 +7,26 @@
     android:padding="16dp"
     tools:context="org.d3ifcool.rememberactivities.LihatKegiatanActivity">
 
-    <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="8dp"
-        >
-
-        <RelativeLayout
-            android:background="@color/colorMain2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:padding="8dp"
-                android:text="Nama Kegiatan"
-                android:textColor="#222"
-                android:textStyle="bold"
-                android:textSize="22dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:maxLines="3"
-                android:padding="8dp"
-                android:text="Tanggal"
-                android:textColor="#666"
-                android:textSize="14dp" />
-
-            <com.google.android.gms.maps.MapView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:map="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/mapView"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:background="#00000000"
-                android:clickable="true"
-                map:uiCompass="true" />
-
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+   <ListView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/listView_kegiatan"/>
+   <!--empty view-->
+   <RelativeLayout
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/emptyview"
+       android:layout_centerInParent="true"
+       >
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/title_emptyview"
+          android:layout_centerHorizontal="true"
+          android:fontFamily="sans-serif-medium"
+          android:paddingTop="16dp"
+          android:text="Kegiatan Masih Kosong"
+          android:textAppearance="?android:textAppearanceMedium"
+          />
+   </RelativeLayout>
 </RelativeLayout>
