--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -21,5 +21,11 @@
         android:title="Keluar akun"
         app:showAsAction="never"
         />
+    <item
+        android:id="@+id/profil"
+        android:title="profile"
+        android:icon="@drawable/ic_profile"
+        app:showAsAction="always"
+       />
 
 </menu>
