merubah warna pada beberapa layout

--- a/app/src/main/res/layout/lihatkegiatan_card_view.xml
+++ b/app/src/main/res/layout/lihatkegiatan_card_view.xml
@@ -8,7 +8,7 @@
     app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
     <RelativeLayout
-        android:background="@color/colorMain2"
+        android:background="@color/colorMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
