melihat rincian kegiatan

--- a/app/src/main/res/layout/activity_rincian_kegiatan.xml
+++ b/app/src/main/res/layout/activity_rincian_kegiatan.xml
@@ -31,6 +31,7 @@
         android:text="Nama Kegiatan              :  "
         android:textColor="#000" />
     <TextView
+        android:id="@+id/rincian_namaKgt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="xxxx"
@@ -48,6 +49,7 @@
                 android:text="Tanggal Mulai                :  "
                 android:textColor="#000" />
             <TextView
+                android:id="@+id/rincian_tglMulai"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="xxxx"
@@ -65,28 +67,30 @@
                 android:text="Jam Mulai                      :  "
                 android:textColor="#000" />
             <TextView
+                android:id="@+id/rincian_jamMulai"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="xxxx"
                 android:textColor="#000"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@+id/mapView"
-            android:padding="5dp">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Tanggal Berakhir           :  "
-                android:textColor="#000" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="xxxx"
-                android:textColor="#000"/>
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_below="@+id/mapView"-->
+            <!--android:padding="5dp">-->
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Tanggal Berakhir           :  "-->
+                <!--android:textColor="#000" />-->
+            <!--<TextView-->
+                <!--android:id="@+id/rincian_tglBerakhir"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="xxxx"-->
+                <!--android:textColor="#000"/>-->
+        <!--</LinearLayout>-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -99,6 +103,7 @@
                 android:text="Jam Berakhir                 :  "
                 android:textColor="#000" />
             <TextView
+                android:id="@+id/rincian_jamBerakhir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="xxxx"
@@ -116,6 +121,7 @@
                 android:text="Catatan                           :  "
                 android:textColor="#000" />
             <TextView
+                android:id="@+id/rincian_catatan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="xxxx"
