--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,70 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mainlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.d3ifcool.rememberactivities.MainActivity">
-
-    <RelativeLayout
+<ImageView
+    android:layout_width="130dp"
+    android:layout_height="130dp"
+    android:id="@+id/logo"
+    android:src="@drawable/alarm2"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="30dp"
+    android:layout_marginBottom="16dp"
+    />
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="75dp"
-        >
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/person"
-        android:id="@+id/logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/email"
+        android:hint="Email"
+        android:imeOptions="actionNext"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColor="@color/Black"
+        android:paddingBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_below="@+id/logo"
+        android:layout_marginTop="16dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/password"
+        android:hint="Password"
+        android:imeOptions="actionDone"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColor="@color/Black"
+        android:paddingBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_below="@+id/email"
+        android:layout_marginTop="16dp"
+        android:inputType="textPassword"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:id="@+id/login"
+        android:text="Login"
+        android:layout_below="@+id/password"
+        android:textColor="@color/Black"
+        android:layout_marginTop="16dp"/>
 
+    <TextView
+        android:id="@+id/atau"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="atau login dengan"
+        android:layout_below="@+id/login"
+        android:layout_marginTop="16dp"
+        android:gravity="center_horizontal"
         />
-
-    <RelativeLayout
-        android:id="@+id/relativ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="190dp"
-        android:gravity="center">
-
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/remember_activities"
-            android:textColor="@color/colorMain"
-            android:textSize="25sp"
-            android:textStyle="italic"
-            />
-
-
-        <ProgressBar
-            android:id="@+id/pbar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerHorizontal="true" />
-
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_below="@+id/relativ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="25dp"
-       >
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
-</RelativeLayout>
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/atau"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            />
 </RelativeLayout>
